-feature: Modularize table display
-feature: Allow Graphs and Data Source totals to be sorted when viewing devices
-feature: Add snmp timeout warnings for lib/snmp.php
-feature: upgrade procedure made repeatable
-feature: add more table upgrade procedures and API functions: table install, column and key upgrade
-feature: path for perl/shell like path for php to be used in Data Input Methods

0.8.7h
-bug#0001403: 'reapply suggested names' doesn't work correctly for graphs and data sources
-bug#0001504: no newline fix
-bug#0001568: Cacti currently gives a lot of warnings of deprecated functions on PHP 5.3
-bug#0001626: Cacti does not pass currency symbols ($) used in labels/gprint strings to rrdtool during graph generation.
-bug#0001632: script server treats quoted arguments with spaces as multiple separate arguments
-bug#0001660: Modifying data template values is not working as expected.
-bug#0001678: Adding graphs to a device fails to add entries to poller_item if using the script server 
-bug#0001768: perform consistency check on ds maximum vs. ds minimum
-bug#0001783: Graph Export: The ExportDate is wrong -> we will print current time and number of graphs, then
-bug#0001812: copying a data template ignores item templating
-bug#0001814: CLI - Add Device Script problem when SNMP Default is Disabled 
-bug#0001815: 1-minute with 5-minute crontab broken
-bug#0001816: Cannot export graph data to CSV with IE 8 (8.0.7600.16385) 
-bug#0001819: MySQL "TYPE=" command deprecated since MySQL 4.1 removed in MySQL 5.4.4  
-bug#0001826: zoomed graph views should not have auto refresh since they do not change
-bug#0001828: reapply suggested values gramatical errors
-bug#0001835: invalid number of form tags on graphs.php?action=graph_edit
-bug#0001847: graph export is broken 
-bug#0001851: graph selector in graphs_new.php is broken when there is a data query without graphs 
-bug#0001855: Improper formatting of Data Queries Can Result in SQL Errors